--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,17 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+:root{
+    --s1: 0.25em;
+    --s2: 0.5em;
+    --s3: 0.75em;
+    --s4: 1em;
+}
+
 body {
-    background: #E23E57;
     color: #ffffff;
+    height: 100vh;
 }
 
 h2 {
@@ -43,4 +54,11 @@ ol li::marker {
     font-style: italic;
     display: block;
     font-weight: 800;
+}
+
+.container {
+    /* margin: var(--padding-small); */
+    /* height: calc(100vh - 0.25em * 2); */
+    height: 100vh;
+    padding: var(--s3);
 }
