--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,6 @@
 }
 
 body {
-    color: #ffffff;
     height: 100vh;
 }
 
@@ -26,35 +25,35 @@ h3 {
     margin-bottom: 0;
 }
 
-section {
+/* section {
     display: flex;
-    flex-wrap: wrap; /* Allow items to wrap to the next row */
-    justify-content: space-between; /* Space items evenly between columns */
-}
+    flex-wrap: wrap;
+    justify-content: space-between;
+} */
 
-ol {
+/* ol {
     column-count: 2;
     width: 100%;
     column-gap: 2em;
-}
+} */
 
-ol li:first-child {
+/* ol li:first-child {
     margin-top: 0;
-}
+} */
 
-ol li {
+/* ol li {
     background: #2b2b2b;
     text-align: left;
     font-family: 'Inter', sans-serif;
     margin: 0.5em 0;
     padding: 0.5em;
-}
+} */
 
-ol li::marker {
+/* ol li::marker {
     font-style: italic;
     display: block;
     font-weight: 800;
-}
+} */
 
 .container {
     /* margin: var(--padding-small); */
