--- a/src/index.css
+++ b/src/index.css
@@ -13,8 +13,9 @@
 body {
     height: 100vh;
     font-family: 'Inter', sans-serif;
-    background: url('backgroundGradient.svg');
+    background: url('/backgroundGradient.svg');
     background-size: cover;
+    background-attachment: fixed;
 }
 
 /* h2 {
